--- a/RandomProjectionNeuralNetwork/RandomProjectionNeuralNetwork.ipynb
+++ b/RandomProjectionNeuralNetwork/RandomProjectionNeuralNetwork.ipynb
@@ -1306,11 +1306,11 @@
     "    for j in range(int(batches)):\n",
     "        \n",
     "        #forward pass\n",
-    "        out=net(trdttensor[j:j+batchsize,:].type(dtype))\n",
+    "        out=net(trdttensor[j*batchsize:(j+1)*batchsize,:].type(dtype))\n",
     "\n",
     "        #compute loss\n",
     "        criterion = nn.MSELoss()\n",
-    "        loss = criterion(out,results1tensor[j:j+batchsize]).type(dtype)\n",
+    "        loss = criterion(out,results1tensor[j*batchsize:(j+1)*batchsize]).type(dtype)\n",
     "\n",
     "\n",
     "        #backprop loss i.e. find dloss/dparam for each parameter and store.\n",
@@ -2786,11 +2786,11 @@
     "    for j in range(int(batches)):\n",
     "        \n",
     "        #forward pass\n",
-    "        out=net1(projectiontensor[j:j+batchsize,:].type(dtype))\n",
+    "        out=net1(projectiontensor[j*batchsize:(j+1)*batchsize,:].type(dtype))\n",
     "\n",
     "        #compute loss\n",
     "        criterion = nn.MSELoss()\n",
-    "        loss = criterion(out,results1tensor[j:j+batchsize]).type(dtype)\n",
+    "        loss = criterion(out,results1tensor[j*batchsize:(j+1)*batchsize]).type(dtype)\n",
     "\n",
     "\n",
     "        #backprop loss i.e. find dloss/dparam for each parameter and store.\n",
@@ -4321,11 +4321,11 @@
     "    for j in range(int(batches)):\n",
     "        \n",
     "        #forward pass\n",
-    "        out=net2(trdttensor[j:j+batchsize,:].type(dtype))\n",
+    "        out=net2(trdttensor[j*batchsize:(j+1)*batchsize,:].type(dtype))\n",
     "\n",
     "        #compute loss\n",
     "        criterion = nn.MSELoss()\n",
-    "        loss = criterion(out,results1tensor[j:j+batchsize]).type(dtype)\n",
+    "        loss = criterion(out,results1tensor[j*batchsize:(j+1)*batchsize]).type(dtype)\n",
     "\n",
     "\n",
     "        #backprop loss i.e. find dloss/dparam for each parameter and store.\n",
